# contact-mcp

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
contact_mcp/: __init__.py  campaign.py  config.py  db.py  guardrails.py  oracle_db.py  query.py  server.py  tools.py  transaction.py
tests/: test_query_builder.py  test_transaction_query.py
