[project]
name = "contact-mcp"
version = "0.1.0"
description = "MCP server for Postgres contact queries"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.2.0",
  "psycopg[binary]>=3.1.18",
]

[project.scripts]
contact-mcp = "contact_mcp.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
